# spar-demo

./: .gitignore  README.md  app.py  modal_app.py  push_to_vast.sh  pyproject.toml  requirements.txt  run_remote.sh  steering.py  test_mock.py
experiments/: analyze_stock_battery.py  analyze_v1_deep.py  eval_sampling.py  leadlag.py  lexical_dissociation.py  phase2_causal.py  phase2b_random_control.py  phase3_mlp_bodyprobe.py  phase4_causal.py  phase4_train_bodyprobe.py  plot_alpha_sweep.py  plot_chain_compare.py  plot_layer_sweep.py  plot_probe_trajectory.py  probe_trajectory.py  probe_trajectory_chained.py  run_free_ordering.py  run_separated_steering.py  selectivity_sweep.py  stock_battery.py  sweep_layers.py  train_caa_probes.py  train_caa_v3.py  train_continuous_v3.py  train_horizon_probe.py
results/: alpha_sweep.json  alpha_sweep_v3.json  layer_sweep.json
results/qwen3.5-9b-base/: probes_caa.pkl  probes_caa_v3.pkl  probes_continuous_v3.pkl
