[project]
name = "spar-demo"
version = "0.1.0"
description = "Interactive UI for causal steering with temporal probes from tam."
requires-python = ">=3.10"
dependencies = [
    "gradio>=4.44.0",
    "torch>=2.3",
    "transformers>=4.44",
    "accelerate>=0.33",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
modal = ["modal>=0.64"]
spaces = ["spaces>=0.28"]

[tool.uv]
package = false
